--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dev": "node app.js",
     "build": "next build",
     "now-build": "next build",
-    "start": "NODE_ENV=production node app.js"
+    "start": "next start -p $PORT",
+    "start:server": "NODE_ENV=production node app.js"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
